--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
-	<link rel="stylesheet" type="text/css" href="css/owl.transitions.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/owl.transition.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animate.min.css"/>
-	<link rel="stylesheet" type="text/css" href="css/main.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/main.css"/>
 
 
 	<script async type="text/javascript" src="js/jquery.js"></script>
@@ -21,7 +21,7 @@
 	<script async type="text/javascript" src="js/wow.js"></script>
 	<script async type="text/javascript" src="js/parallax.min.js"></script>
 	<script async type="text/javascript" src="js/nicescroll.js"></script>
-	<script async type="text/javascript" src="js/main.min.js"></script>
+	<script async type="text/javascript" src="js/main.js"></script>
 	<script async type="text/javascript" src="js/scrollTo.js"></script>
 </head>
 <body>
