added optimized hero img

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script async type="text/javascript" src="js/wow.js"></script>
 	<script async type="text/javascript" src="js/parallax.min.js"></script>
 	<script async type="text/javascript" src="js/nicescroll.js"></script>
-	<script async type="text/javascript" src="js/main.js"></script>
+	<script async type="text/javascript" src="js/main.min.js"></script>
 	<script async type="text/javascript" src="js/scrollTo.js"></script>
 </head>
 <body>
