--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
 
 
-	<script async type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script defer type="text/javascript" src="js/ajaxchimp.js"></script>
 
-	<script defer type="text/javascript" src="js/owl.carousel.min.js"></script>
+	<script async type="text/javascript" src="js/owl.carousel.min.js"></script>
 	<script defer type="text/javascript" src="js/wow.js"></script>
 	<script defer type="text/javascript" src="js/parallax.min.js"></script>
 	<script defer type="text/javascript" src="js/nicescroll.js"></script>
-	<script async type="text/javascript" src="js/main.min.js"></script>
+	<script async type="text/javascript" src="js/main.js"></script>
 	<script defer type="text/javascript" src="js/scrollTo.js"></script>
 </head>
 <body>
